--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,8 +25,10 @@
     "react-native-email": "^1.1.0",
     "react-native-email-link": "^1.13.1",
     "react-native-gesture-handler": "~1.10.2",
+    "react-native-maps": "^0.30.1",
     "react-native-paper": "^4.9.1",
     "react-native-ratings": "^8.1.0",
+    "react-native-raw-bottom-sheet": "^2.2.0",
     "react-native-reanimated": "~2.2.0",
     "react-native-safe-area-context": "3.2.0",
     "react-native-screens": "~3.4.0",
