--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,7 @@
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
-    "@react-navigation/stack": "^5.14.5",
+    "@react-navigation/stack": "^5.9.4",
     "axios": "^0.26.0",
     "expo": "~42.0.1",
     "expo-constants": "~11.0.2",
@@ -22,6 +22,7 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native-communications": "^2.2.1",
     "react-native-elements": "^3.4.2",
     "react-native-email": "^1.1.0",
     "react-native-email-link": "^1.13.1",
