--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,6 +31,7 @@
     "react-native-linear-gradient": "^2.5.6",
     "react-native-mail": "^6.1.1",
     "react-native-maps": "^0.30.1",
+    "react-native-modalize": "^2.0.13",
     "react-native-paper": "^4.9.1",
     "react-native-ratings": "^8.1.0",
     "react-native-raw-bottom-sheet": "^2.2.0",
