--- a/frontend/package.json
+++ b/frontend/package.json
@@ -27,6 +27,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-email": "^1.1.0",
     "react-native-email-link": "^1.13.1",
+    "react-native-fs": "^2.19.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-mail": "^6.1.1",
