--- a/frontend/app.json
+++ b/frontend/app.json
@@ -6,9 +6,9 @@
     "orientation": "portrait",
     "icon": "./assets/icon.png",
     "splash": {
-      "image": "./assets/hawkerpediaicon.png",
+      "image": "./assets/klipartz.com-removebg.png",
       "resizeMode": "contain",
-      "backgroundColor": "#FFB899"
+      "backgroundColor": "#ffbe30"
     },
     "updates": {
       "fallbackToCacheTimeout": 0
