--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,23 +10,29 @@
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@expo/vector-icons": "^12.0.0",
+    "@react-native-async-storage/async-storage": "~1.15.0",
     "@react-native-community/masked-view": "0.1.10",
     "@react-navigation/bottom-tabs": "^5.11.11",
     "@react-navigation/native": "^5.9.4",
     "@react-navigation/stack": "^5.14.5",
     "axios": "^0.26.0",
+    "csv-parser": "^3.0.0",
     "expo": "~42.0.1",
     "expo-constants": "~11.0.2",
+    "expo-file-system": "~11.1.3",
     "expo-status-bar": "~1.0.4",
     "expo-web-browser": "~9.2.0",
+    "jsonfile": "^6.1.0",
     "react": "16.13.1",
+    "react-csv": "^2.2.2",
     "react-dom": "16.13.1",
     "react-expo-snack": "^1.0.0",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native": "0.63.4",
     "react-native-communications": "^2.2.1",
     "react-native-elements": "^3.4.2",
     "react-native-email": "^1.1.0",
     "react-native-email-link": "^1.13.1",
+    "react-native-fetch-blob": "^0.10.8",
     "react-native-fs": "^2.19.0",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-linear-gradient": "^2.5.6",
@@ -41,7 +47,8 @@
     "react-native-screens": "~3.4.0",
     "react-native-searchable-dropdown": "^1.1.3",
     "react-native-web": "~0.13.12",
-    "react-native-webview": "^11.17.2"
+    "react-native-webview": "^11.17.2",
+    "write-json-file": "^5.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0"
