--- a/frontend/package.json
+++ b/frontend/package.json
@@ -28,7 +28,7 @@
     "react-native-elements": "^3.4.2",
     "react-native-email": "^1.1.0",
     "react-native-email-link": "^1.13.1",
-    "react-native-fs": "^2.19.0",
+    "react-native-fs": "2.0.1-rc.2",
     "react-native-gesture-handler": "~1.10.2",
     "react-native-linear-gradient": "^2.5.6",
     "react-native-mail": "^6.1.1",
@@ -42,10 +42,12 @@
     "react-native-screens": "~3.4.0",
     "react-native-searchable-dropdown": "^1.1.3",
     "react-native-web": "~0.13.12",
-    "react-native-webview": "^11.17.2"
+    "react-native-webview": "^11.17.2",
+    "write-json-file": "^5.0.0"
   },
   "devDependencies": {
-    "@babel/core": "^7.9.0"
+    "@babel/core": "^7.9.0",
+    "@types/node": "^17.0.21"
   },
   "private": true
 }
