--- a/frontend/package.json
+++ b/frontend/package.json
@@ -43,7 +43,8 @@
     "react-native-searchable-dropdown": "^1.1.3",
     "react-native-web": "~0.13.12",
     "react-native-webview": "^11.17.2",
-    "write-json-file": "^5.0.0"
+    "write-json-file": "^5.0.0",
+    "expo-font": "~9.2.1"
   },
   "devDependencies": {
     "@babel/core": "^7.9.0",
