--- a/frontend/package.json
+++ b/frontend/package.json
@@ -45,6 +45,7 @@
     "react-native-searchable-dropdown": "^1.1.3",
     "react-native-web": "~0.13.12",
     "react-native-webview": "^11.17.2",
+    "split-string": "^6.1.0",
     "write-json-file": "^5.0.0"
   },
   "devDependencies": {
